...
    await refetch();
    await updateWidget();
    getRandomFact();
  }, [refetch, getRandomFact, safelyExecuteWhenReady, loadWallet]);

  const openHistory = () => {
    parentNavigation?.navigate("History", { screen: "TransactionsList" });
  };

  const openTransaction = (transaction: Transaction) => {
    setSelectedTransaction(transaction);
    setIsTransactionSheetOpen(true);
  };

  const repeatPayment = (details: RepeatPaymentDetails) => {
    setIsTransactionSheetOpen(false);
    parentNavigation?.navigate("Send", { repeatPayment: details, requestId: Date.now() });
  };

  const isLoading = isBalanceLoading || isSyncPending || isRateLoading;
  const balances = balance ? calculateBalances(balance) : null;
  const totalBalance = balances?.totalBalance ?? 0;
  const onchainBalance = balances?.onchainBalance ?? 0;
...
              <T>
                <Text className="text-blue-400 text-sm">Background task in progress...</Text>
              </T>
            </View>
          </View>
        )}
        <View onLayout={onLayout} className="py-8" testID="home-content">
          {isLoading && !balance ? (
            <View className="items-center justify-center py-28">
              <NoahActivityIndicator size="large" />
            </View>
          ) : (error || walletError) && !balance ? (
            <Alert variant="destructive" icon={AlertCircle}>
...
