...
            Create a new wallet or restore an existing one.
          </Text>
        </T>
        <View>
          <View className="flex-row flex-wrap justify-center gap-5">
            <NativeNoahButton
              label={gt("Create Wallet", { $context: "Button to create a new Bitcoin wallet." })}
              onPress={handleCreateWallet}
              size="lg"
              width={220}
            />
            <NativeNoahButton
              label={gt("Restore Wallet", {
...
